--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <a href="html://neodium.github.io/smol_page.html"> Страница 1 </a>
-        <a href="html://neodium.github.io/yuge_page.html"> Страница 2 </a>
+        <a href="http://neodium.github.io/smol_page.html"> Страница 1 </a>
+        <br>
+        <a href="http://neodium.github.io/yuge_page.html"> Страница 2 </a>
       </body>
 </html>
