--- a/smol_page.html
+++ b/smol_page.html
@@ -4,6 +4,103 @@
         <meta charset="utf-8">
     </head>
     <body>
-      [[Кардан]]а
+      {{Персонаж
+|Изображение = [[Файл:Шустрый.png]]
+|Прозвище = Шустрый
+|Игры = Во всей серии
+|Ранг = [[Файл:Ранг - Опытный.png|30px|Опытный]] [[Ранги и звания|Опытный]] (ЧН) <br>[[Файл:Ранг - Новичок.png|30px|Новичок]] [[Ранги и звания|Новичок]] (ТЧ)<br>[[Файл:Ранг - Ветеран.png|30px|Ветеран]] [[Ранги и звания|Ветеран]] (ЗП)
+|Группировка =  [[Файл:Лого ЧН.png|20px]] «[[Чистое небо (группировка)|Чистое Небо]]» (ЧН)<br>[[Файл:Лого сталкеров.png|20px]] [[Одиночки]] (ТЧ и ЗП)
+|Род деятельности = Сбор информации ([[ЧН]])<br>«Правая рука» [[Лебедев]]а (ЧН)<br>[[Проводник]] (ЧН)<br>[[Покупка тайников|Продажа тайников]] ([[ЧН]])<br>Работа на [[Сидорович]]а ([[ТЧ]])<br>Предпринимательство ([[ЗП]])
+|Оружие    = [[ПМм]] (ТЧ)<br>[[АКМ-74/2У]] (ЗП)<br>[[Чёрный ястреб]] с глушителем (ЗП)
+|Снаряжение  = [[Бронежилет ЧН-1]] (ЧН)<br>[[Кожаная куртка]](ТЧ и ЗП)
+|Смерть = Может убить Меченый
+|Место смерти = АТП, либо деревня новичков}}
+'''Шустрый''' — персонаж, встречающийся во всей серии [[S.T.A.L.K.E.R.]]
+
+== Описание ([[ЧН]]) ==
+{{Цитата|Собираю воедино информацию, которую мне сбрасывают ребята. Консультирую нашего доблестного лидера. Понимаешь, мы, проводники — глаза и уши «Чистого Неба» на Болотах.|автор = Шустрый о себе}}
+
+== Игровая биография (ТЧ) ==
+{{Цитата|Сталкер, которого прозвали шустрым за его умение быть незаметным и незаменимым. Торговец его иногда использует для деликатных заданий, проследить за кем-то, что-то подсмотреть, подслушать.}}
+
+== Описание ([[ЗП]]) ==
+{{Цитата|Всякое бывало, как и со всеми тут: и в аномалии попадал, и в плену у бандитов был... Я же в Зону ещё пацаном пришёл. Вначале по мелочи бегал - антирады, патроны бронебойные... Потом с Сидоревичем работал - долг отдавал, он мне разок шкуру спас. Пока для него каштаны из огня таскал, завёл пару своих полезных знакомств, ну и при первой возможности взялся за эксклюзивные заказы. Я же ведь из любой ситуации выкручивался - и, чую, однажды удача сбойнёт. А дурное желание загибаться по пустякам уже давно выветрилось.|автор = Шустрый о себе}}
+{{Цитата|Я же когда мастерскую только обустраивал, кто мне помог? Шустрый. Причём совершенно по-дружески, за так. Кто бы чего ни говорил, я знаю: Шустрый — хороший человек.|автор = [[Кардан]] о Шустром}}
+{{Цитата|По бизнесу мы не пересекаемся: пока он один мега-ствол по всей Зоне ищет, я уже сотню обычных продать успеваю. Так что торговец из него аховый — ну а мне оно, в общем-то и на руку.|автор = [[Сыч]] о Шустром}}
+{{Цитата|Насколько я его знаю, он с тёмными делами предпочитает не связываться. Любой правильный бизнесмен дорожит своей репутацией! В общем, плохого слова про Шустрого я ни от кого пока не слышал.|автор = [[Борода]] о Шустром}}
+{{Цитата|Шустрого я давно знаю, оружие у него заказываю постоянно - и товар отличный и цена...|автор = [[Гонта]] о Шустром}}
+{{Цитата|Знаешь штымпа одного, Шустрый у него погоняло? Так он в натуре шустрый тип. Мало того, что реальные стволы на заказ таскает, так ещё и ныкает их — хрен найдёшь! Не, ну ты скажи, куда можно заныкать [[Винтарь-ВС|«Винтарь»]], шоб нигде на постой не торчал? Реально фокусник, мля!|автор = [[Бандиты]]}}
+
+== В играх серии ==
+[[Файл:Шустрый в ЧН.jpg|thumb|left|Шустрый в [[ЧН]]]]
+=== ''Чистое небо'' ===
+В 2011 году Шустрый — один из членов [[Чистое небо (группировка)|«Чистого неба»]], помощник [[Лебедев]]а, проводник. По причине малого числа проводников часто работает по несколько дней, из-за чего постоянно спит на табуретке напротив кабинета Лебедева. Знает тактическую ситуацию «Чистого Неба» на [[Болота]]х, объясняет [[Шрам]]у возможности его [[КПК]] и продаёт наводки на [[тайник]]и.[[Файл:Шустрый в ТЧ.jpg|thumb|left|Шустрый в [[ТЧ]]]]
+=== ''Тень Чернобыля'' ===
+После распада [[Чистое небо (группировка)|«Чистого Неба»]] Шустрый отправляется на [[Кордон]] для того, чтобы обогатиться, там он начинает работать на [[Сидорович]]а. Во время одного из заданий вместе с [[Толик]]ом и ещё двумя сталкерами несёт Сидоровичу ценную [[Флешки|флешку]], однако их планам помешали [[бандиты]]. Двое сталкеров погибают, Толика ранят, а сам Шустрый попадает в плен. Спустя некоторое время [[Группа Петрухи|отряд]] [[Петруха|Петрухи]] вместе с [[Стрелок|Меченым]] выбивает [[Бандиты|бандитов]] с [[АТП]] и спасает Шустрого, после чего он поселяется в [[Деревня новичков|деревне новичков]].
+[[Файл:Шустрый в ЗП.jpg|thumb|left|Шустрый в [[ЗП]]]]
+=== ''Зов Припяти'' ===
+После отключения [[Выжигатель мозгов|Выжигателя мозгов]] Шустрый отправляется к центру [[Зона|Зоны]] и вместе с группой сталкеров приходит на [[Затон]], где и был основан лагерь «[[Скадовск]]». Там он зарабатывает на заказах уникального боевого снаряжения.
+
+== Связанные квесты ==
+* [[Забрать информацию у разведчика]] ([[ТЧ]])
+* [[Найти усовершенствованный костюм]] ([[ТЧ]])
+* [[Найти усовершенствование]]: [[Флешка с данными о дульном тормозе для пистолетов-пулемётов]] ([[ЧН]])
+* [[Заказы Шустрого|Особый заказ]] ([[ЗП]])
+* [[Репутация]] ([[ЗП]])
+
+== Примечания ([[ТЧ]]) ==
+* Внешность Шустрого была присвоена ему не сразу — раньше с ней «ходил» [[Сеня Станонщик]].
+* В погребе дома, где поселяется Шустрый после спасения, в ящике лежит [[Кровь камня]].
+* Может быть убит бандитами на [[АТП]], даже когда находится в плену.
+* Существует вероятность того, что Шустрый будет штурмовать [[АТП]] или расстреливать мутантов вокруг [[Деревня новичков|деревни новичков]].
+* Существует баг, при котором Шустрый может лечь спать, не доходя деревни новичков.
+* После зачистки [[АТП]] может отказаться говорить с Меченым, повторяя: «Отстань от меня!». Этот баг исправляется перезагрузкой.
+* После спасения Меченым можно услышать, как Шустрый выкрикивает во сне фразы, например, «Не стреляйте!» или «Нет! Не надо!». Возможно, после пленения [[бандиты|бандитами]] на АТП ему начали сниться кошмары.
+* В [[ТЧ]] можно заметить, что Шустрый начинает интересоваться уникальным снаряжением, так как он даёт задание на поиск [[Кольчужная куртка|кольчужной куртки]].
+* Во время нахождения Меченого в Тёмной Долине может пойти на АТП и засядет на том месте, где его держали в плену, но скорее всего его убьют, так как АТП является местом респауна бандитов.
+* Может погибнуть при штурме [[Наемники|наемниками]] деревни новичков.
+*У Шустрого [[кожаная куртка]] имеет уникальный бело-чёрный цвет. Второй персонаж, обладающий такой текстурой куртки — [[Юрик]].
+* Примечательно, что после спасения Шустрый не становится другом для [[Меченый|Меченого]], а остаётся нейтралом.
+* У некоторых [[NPC]] может быть кличка «Шустрый», даже у отряда Петрухи.[[Файл:XR_3DA_2016-07-31_01-56-29-469.jpg|thumb|NPC с кличкой «Шустрый»|209x209px]]
+[[Файл:Ss_admin_07-05-14_20-28-49_(zaton).jpg|thumb|214px|Чёрный ястреб Шустрого]]
+
+== Интересные факты ==
+
+=== ''В играх серии'' ===
+* Шустрый — один из двух персонажей, встречающихся во всех играх серии (второй такой персонаж — [[Стрелок]]).
+* Во всех трёх играх имеет разную озвучку.
+* Во всех играх серии Шустрый появляется только в самом начале игры, после чего никак не фигурирует в сюжете.
+* В [[ЧН]] Шустрый из-за недосыпа постоянно дремает на табуретке, в [[ТЧ]] он также спит всё свободное время, но уже в [[ЗП]] — наоборот, персонаж не из медлительных — примерно за сутки он успевает достать уникальную экипировку.
+* В [[ЧН]] имел [[Ранги и звания|ранг]] «Опытного сталкера», а в [[ТЧ]] стал «Новичком».
+
+=== ''Зов Припяти'' ===
+* [[ЗП|Позади]] Шустрого на коробке лежит [[Чёрный ястреб]] с [[Глушитель|глушителем]]. Подобрать пистолет нельзя, поскольку он является деталью интерьера.
+* Возможно, при заказе [[Дегтярёв]]ым набора бронезащиты Шустрый продаёт ему свой комплект брони [[Бронежилет ЧН-3а|ЧН-3а]], а [[Тактический шлем|шлем]] просто покупает.
+* После взятия заказа он исчезает, стоит [[Дегтярёв]]у отойти от него на несколько метров. Если спускаться по лестнице на «[[Скадовск]]е» спиной вперёд, можно увидеть, как он «испаряется» на глазах у игрока.
+
+=== ''В литературе'' ===
+* В книге Андрея Левицкого «[[Я — сталкер. Тропами мутантов]]» есть сталкер с таким же прозвищем, однако он не имеет ничего общего с игровым персонажем.
+
+{{Нав-ТЧ}}
+{{Нав-ЧН}}
+{{Нав-ЗП}}
+{{Нав-Одиночки}}
+{{Нав-ЧистоеНебо}}
+[[uk:Спритник]]
+[[en:Nimble]]
+[[pl:Żwawy]]
+[[Категория:Персонажи]]
+[[Категория:Персонажи «Тени Чернобыля»|Шустрый]]
+[[Категория:Персонажи «Чистого Неба»]]
+[[Категория:Персонажи «Зова Припяти»]]
+[[Категория:Одиночки]]
+[[Категория:Чистое небо]]
+[[Категория:Ветераны]]
+[[Категория:Второстепенные персонажи]]
+[[Категория:Основные персонажи]]
+[[Категория:Новички]]
+[[Категория:Опытные]]
+[[Категория:Персонажи с уникальной внешностью]]
+[[Категория:Торговцы]]
       </body>
 </html>
